# chat

./: .gitignore  README.md  pyproject.toml
gateway/: gateway.sln
gateway/api/: Dockerfile  Program.cs  api.csproj  api.http
gateway/api/Models/: ChatUser.cs  CommunicationDetails.cs  LoginDetails.cs  Message.cs  NegotiationRequest.cs  RegisterUserRequest.cs  UserMessageRequest.cs
gateway/api/utils/: ProtoStructExtensions.cs
protos/: message.proto  user.proto
python/: README.md
python/message/: Dockerfile  README.md  message_client.py  message_pb2.py  message_pb2_grpc.py  message_service.py  receiver.py
python/user/: Dockerfile  user_client.py  user_pb2.py  user_pb2_grpc.py  user_service.py
ui/: package-lock.json  package.json
ui/src/lib/: store.js
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/chat/: +page.svelte
ui/src/routes/register/: +page.svelte
user/: user_pb2.py  user_service.py
